pkg/envoyfilter/testdata/global/basic.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ratelimit-sample
  ownerReferences:
    - apiVersion: policy.zirain.info/v1alpha1
      kind: RateLimit
      name: ratelimit-sample
spec:
  workloadSelector:
    labels:
      app: httpbin
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.ratelimit
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
            domain: httpbin # must match domain in ratelimit ConfigMap
            failure_mode_deny: false # run plugin in fail-open mode, no limiting happens if ratelimit is unavailable
            rate_limit_service:
              grpc_service:
                envoy_grpc:
                  cluster_name: outbound|8081||ratelimit.default.svc.cluster.local
                  authority: ratelimit.default.svc.cluster.local
                timeout: 20ms
              transport_api_version: V3
    - applyTo: HTTP_ROUTE
      match:
        context: SIDECAR_INBOUND
        routeConfiguration:
          vhost:
            route:
              action: ROUTE
      patch:
        operation: MERGE
        value:
          route:
            rateLimits:
              - actions: # any actions in here
                  - headerValueMatch:
                      descriptorValue: URL|Prefix|/ip
                      headers:
                        - name: :path
                          stringMatch:
                            prefix: /ip
                            ignoreCase: true
